# Architect.IQ

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  dev.sh  pyproject.toml
.claude/: launch.json
examples/: rates-blended-leverage.csv  rates-onshore.csv  sparq-current-rates-hourly.csv  sparq-current-rates.csv  sparq-current-rates.md
frontend/: .env.demo  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  styles.css  theme.ts  types.ts
frontend/src/components/: AdminView.tsx  Avatar.tsx  CommentsSection.tsx  ContextPanel.tsx  Dashboard.tsx  EstimatePage.tsx  EstimateView.tsx  EstimatesList.tsx  Login.tsx  MermaidDiagram.tsx  Modal.tsx  NewEstimate.tsx  OpportunitiesList.tsx  OpportunityView.tsx  RatesView.tsx  Section.tsx  Settings.tsx  ShareControls.tsx  SharePanel.tsx  SharedPage.tsx  Spinner.tsx
src/architect_iq/: __init__.py  data_loader.py  demo.py  service.py
src/architect_iq/api/: __init__.py  app.py
src/architect_iq/auth/: __init__.py  access.py  oidc.py  security.py
src/architect_iq/core/: __init__.py  advisor.py  estimation.py  factors.py  llm.py  matcher.py  montecarlo.py  rates.py  recompute.py  scenarios.py  velocity.py  vision.py
src/architect_iq/data/: SCHEMA.md  (+9 more)
tests/: conftest.py  test_api.py  test_auth.py  test_context_panel.py  test_data_load.py  test_demo_and_ingest.py  test_estimation.py  test_live_editor.py  test_llm.py  test_methodology.py  test_persistence_memory.py  test_rates.py  test_scenarios.py  test_solution_graph.py  test_tags.py  test_velocity_cost.py
(+27 files in other folders)
