[project]
name = "architect-iq"
version = "0.1.0"
description = "Architect.IQ estimation engine: PRD + client context to a calibrated project estimate (Phase 1)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Sparq Solutions Consulting" }]
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "python-docx>=1.1",
    "pypdf>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
architectiq = "architect_iq.agent.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect_iq"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
